<resources>
    <string name="app_name">Vxnaid</string>
    <string name="update_version">Downloading app update</string>
    <string name="general_label_na">N/A</string>
    <string name="general_label_close">Close</string>
    <string name="general_label_error">Something went wrong. Please try again.</string>
    <string name="general_label_log_out">Log out</string>
    <string name="general_label_retry">Retry</string>
    <string name="general_label_skip">Skip</string>
    <string name="general_label_submit">Submit</string>
    <string name="general_label_cancel">Cancel</string>
    <string name="general_label_confirm">Confirm</string>
    <string name="general_label_save">Save</string>
    <string name="general_label_restart_workflow">Restart Workflow</string>
    <string name="general_label_ok">OK</string>
    <string name="general_label_yes">Yes</string>
    <string name="general_label_no">No</string>
    <string name="general_label_update">Update</string>
    <string name="general_label_cancel_setup">Exit Setup Wizard</string>
    <string name="general_label_continue_setup">Continue Setup</string>
    <string name="update_error_no_network">No network connection available. Please connect to the internet. If download is in progress, it will be resumed automatically.</string>
    <string name="login_label_intro">Welcome operator, please login below to get started:</string>
    <string name="login_label_sign_in">Sign in</string>
    <string name="login_label_username">Username</string>
    <string name="login_label_password">Password</string>
    <string name="settings_label_backend_url">Backend URL</string>
    <string name="settings_label_licenses">Biometric Licenses</string>
    <string name="settings_label_deviceId">Device ID</string>
    <string name="settings_label_no_licenses">No active licenses</string>
    <string name="settings_label_deactivate">Deactivate</string>
    <string name="settings_msg_no_network_cannot_deactive">Cannot deactivate licenses without a network connection.</string>
    <string name="settings_msg_no_network_cannot_activate">Cannot activate licenses without a network connection.</string>
    <string name="settings_msg_error_cannot_activate">Cannot activate licenses.</string>
    <string name="settings_msg_error_cannot_deactivate">Cannot deactivate licenses.</string>
    <string name="settings_msg_error_cannot_activate_some_licenses">Some licenses could not be obtained. Please try activating them again.</string>
    <string name="settings_msg_copied_deviceID">Device ID copied to clipboard</string>
    <string name="settings_label_settings">Settings</string>
    <string name="settings_label_activate">Activate</string>
    <string name="settings_label_setup">Setup</string>
    <string name="settings_label_rerun_wizard">Re-run Setup Wizard</string>
    <string name="settings_label_sync_now">Sync Now</string>
    <string name="settings_label_share_logs" translatable="false">Share Logs</string>
    <string name="settings_label_clear_logs" translatable="false">Clear Logs</string>
    <string name="update_label_title">Update Application</string>
    <string name="update_label_description">A new update is available for the application. Please update as soon as possible.</string>
    <string name="update_label_current_version">Current Version: %s</string>
    <string name="update_label_new_version">Latest Version: %s</string>
    <string name="update_label_downloading">Downloading (%s)</string>
    <string name="update_error_version_check">Error retrieving latest application version</string>
    <string name="update_error_downloading">Error while downloading application file</string>
    <string name="login_label_more_information">Note: You need login credentials provided by your administration. It is not possible to register an account or reset a password through this app.</string>
    <string name="login_label_error">Login failed. Please try again.</string>
    <string name="login_label_error_offline">Login failed. Operator username not present in offline database, credentials may have expired. Network connection required to log in again with this username.</string>
    <string name="login_label_error_sync_admin_role_not_allowed">You\’re not allowed to login here as a Sync Admin. Please login via the setup wizard.</string>
    <string name="login_label_error_opertor_role_not_allowed">You\’re not allowed to login here as an Operator. Please login via the operator login screen.</string>
    <string name="login_label_error_opertor_role_required">You must be an Operator to login here.</string>
    <string name="login_label_error_sync_admin_role_required">You must be a Sync Admin to login here.</string>
    <string name="login_label_error_not_authenticated">Login failed (unauthenticated). Please try again.</string>
    <string name="login_label_validation_no_username">Please enter your username</string>
    <string name="login_label_validation_no_password">Please enter your password</string>
    <string name="login_label_validation_no_backend_url">Please enter a valid backend URL</string>
    <string name="dialog_login_title">Session expired</string>
    <string name="dialog_login_description">Your session has expired. Please provide operator password to logon again or terminate current session.</string>
    <string name="dialog_login_btn_terminate">Terminate session</string>
    <string name="dialog_login_btn_renew">Renew login</string>
    <string name="site_selection_title">Welcome operator</string>
    <string name="site_selection_description">Please find and select your site location from the list below to get started:</string>
    <string name="site_selection_input_hint">Select site location</string>
    <string name="site_selection_btn_submit">Submit</string>
    <string name="site_selection_error_no_site_selected">Please select a site</string>
    <string name="match_or_register_patient_welcome">Welcome operator %s, you are currently at site %s</string>
    <string name="match_or_register_patient_step_id_card">Scan or enter the Child\'s ID number</string>
    <string name="match_or_register_patient_step_phone">Enter the Child\'s phone number</string>
    <string name="match_or_register_patient_step_iris_scan">Iris scan the Child\'s eye(s)</string>
    <string name="match_or_register_patient_step_identify">Identify or register the Child</string>
    <string name="match_or_register_patient_step_visit">Follow-up on Child\'s visits</string>
    <string name="match_or_register_patient_step_index">Step %s</string>
    <string name="match_or_register_patient_btn_continue">Complete Return Visit </string>
    <string name="match_or_register_patient_intro">You will be guided step-by-step to identify or register the Child</string>
    <string name="match_or_register_patient_intro_title">Match or register</string>
    <string name="iris_scan_left_title">Iris scan - Left eye</string>
    <string name="iris_scan_right_title">Iris scan - Right eye</string>
    <string name="participant_matching_title">Child matching</string>
    <string name="participant_flow_participant_id_title">Child Number</string>
    <string name="participant_flow_participant_id_scanned">The format of the ID is not supported</string>
    <string name="participant_flow_participant_id_description">Please scan the Child vaccination card with a QR-Code or manually enter the Child ID number:</string>
    <string name="participant_flow_participant_id_label_manual_entry">Manual ID Entry</string>
    <string name="participant_flow_participant_id_input_hint">#1234567890</string>
    <string name="participant_flow_participant_id_label_or">- OR -</string>
    <string name="participant_flow_participant_id_label_scan_code">QR-Code Scan</string>
    <string name="participant_flow_phone_title">Child Mobile Phone</string>
    <string name="participant_flow_phone_description">Please enter the Child mobile phone number:</string>
    <string name="participant_flow_no_phone_description">Please confirm that the Child has no mobile phone. This will significantly increase the matching time.</string>
    <string name="iris_scan_icon_description">Icon of iris scan</string>
    <string name="iris_scan_intro_right">Please scan the Child\'s RIGHT eye</string>
    <string name="iris_scan_intro_left">Please scan the Child\'s LEFT eye</string>
    <string name="iris_scan_glasses_description">Image of glasses</string>
    <string name="iris_scan_label_capture">Capture Iris</string>
    <string name="iris_scan_label_load_image">Load Image</string>
    <string name="iris_scan_label_redo_capture">Redo Capture</string>
    <string name="iris_scan_label_stop_capture">Stop Scanning</string>
    <string name="iris_scan_msg_quality_indication">Successful scan. Quality: %1$s%%</string>
    <string name="iris_scan_msg_quality_fail">Insufficient scan quality: (%1$s%%). Please rescan.</string>
    <string name="iris_scan_msg_capturing_device_is_unavailable">No iris capturing device available. Please make sure it is connected.</string>
    <string name="iris_scan_msg_no_iris_license">No iris license could be obtained, cannot perform iris scan.</string>
    <string name="msg_no_iris_license_must_force_close">App must be force closed and restarted before iris licenses can be obtained. Do this when sync is not in progress.</string>
    <string name="iris_scan_prompt_scanner_connected">Iris scanner successfully connected.</string>
    <string name="iris_scan_prompt_license_obtained">Biometrics license successfully obtained.</string>
    <string name="iris_scan_prompt_not_all_licensed_obtained">Not all licenses were obtained.</string>
    <string name="scan_barcode_label_raw_value">Raw value</string>
    <string name="scan_barcode_hint">Point your camera at a barcode</string>
    <string name="scan_barcode_permission_message">To be able to scan barcodes, you will need to give access to your camera.</string>
    <string name="scan_barcode_grant_permission">Grant permission</string>
    <string name="participant_matching_msg_no_iris_license">No iris license could be obtained, cannot perform matching.</string>
    <string name="participant_matching_description">Please select matching Child or register a new Child:</string>
    <string name="participant_matching_btn_new_participant">Register a new child</string>
    <string name="participant_matching_btn_match_selected">Match selected Child</string>
    <string name="participant_matching_label_no_results_this_site">No match found within your site.</string>
    <string name="participant_matching_label_other_results">The following matches were found outside your site:</string>
    <string name="participant_matching_label_amount_of_results">Total matches: %d</string>
    <string name="participant_registration_picture_title">New Child photo</string>
    <string name="participant_registration_details_title">New Child details</string>
    <string name="participant_registration_label_take_picture">Please take a clear and well-lit photo of the Child</string>
    <string name="participant_registration_label_confirm_photo_or_try_again">Would you like to submit this photo or try again?</string>
    <string name="participant_registration_details_action_register_participant">Register a Child</string>
    <string name="participant_registration_details_description">Please provide new Child\'s details below:</string>
    <string name="participant_registration_details_label_participant_id">Child Number</string>
    <string name="participant_registration_details_label_confirm_participant_id">Confirm Child Number</string>
    <string name="participant_registration_details_label_iris_id">Iris ID</string>
    <string name="vaccine_dialog_select_vaccine_dropdown">Select vaccine</string>
    <string name="vaccine_dialog_select_vaccine_label">Vaccine</string>
    <string name="general_label_add">Add</string>
    <string name="contraindications_description">Are there any contraindications?</string>
</resources>