<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.jnj.vaccinetracker.settings.SettingsViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <TextView
                android:id="@+id/deviceId_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_label_deviceId"
                android:textAppearance="@style/LabelText"/>

            <LinearLayout
                android:layout_width="@dimen/login_input_field_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/device_Id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@{viewModel.deviceId}" />

                <ImageView
                    android:id="@+id/btn_copy_deviceId"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_content_copy" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_label_setup"
                android:textAppearance="@style/LabelText"/>

            <Button
                android:id="@+id/btn_rerun_setup_wizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/errorDark"
                android:textAppearance="@style/ButtonTextStyling"
                android:text="@string/settings_label_rerun_wizard" />

            <Button
                android:id="@+id/btn_sync_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_label_sync_now"
                android:backgroundTint="@color/colorPrimary"
                android:textAppearance="@style/ButtonTextStyling"
                android:visibility="@{viewModel.showSyncNowButton ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_share_logs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/settings_label_share_logs"
                    android:backgroundTint="@color/colorPrimary"
                    android:textAppearance="@style/ButtonTextStyling"
                    android:visibility="@{viewModel.showShareLogsButton ? View.VISIBLE : View.GONE}" />

                <Button
                    android:id="@+id/btn_clear_logs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/settings_label_clear_logs"
                    android:backgroundTint="@color/colorPrimary"
                    android:textAppearance="@style/ButtonTextStyling"
                    android:visibility="@{viewModel.showClearLogsButton ? View.VISIBLE : View.GONE}" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:text="@string/general_label_close"
                android:backgroundTint="@color/colorPrimary"
                android:textAppearance="@style/ButtonTextStyling" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
