<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.jnj.vaccinetracker.register.dialogs.VaccineDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/input_group_vaccine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/textView_vaccine"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/vaccine_dialog_select_vaccine_label"
                android:textAppearance="@style/LabelText"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_vaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vaccine_dialog_select_vaccine_dropdown"
                    android:inputType="none"
                    android:text="@{viewModel.selectedSubstance.label}" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_label_add" />

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_label_cancel" />
        </LinearLayout>

    </LinearLayout>
</layout>
