<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jnj.vaccinetracker.visit.screens.ContraindicationsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jnj.vaccinetracker.common.ui.SyncBanner
            android:id="@+id/sync_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/contraindications_description"
            android:textAlignment="center"
            android:textAppearance="@style/ScreenTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_yes"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/general_label_yes"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/general_label_no"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_yes"
            app:layout_constraintTop_toTopOf="@id/btn_yes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
